fix(backend): correct the optimizer's float and objective, and close the file-ownership gaps
The critical-path analyser derived each component's finish from its own longest
path, so any task without a parallel alternative had zero float by construction.
On a normal board of chains and independent tasks that meant every task came back
critical: a six-independent-plus-one-chain portfolio reported 9 of 9. The badge,
the dashboard count and the Critical filter therefore said nothing.

Float is now slack against the work's own deadlines - a task's latest acceptable
finish is the earlier of its due date and the latest start its successors can
tolerate - so the same portfolio reports one critical task and a graded spread of
float. Completed work and cross-project anchors still constrain their successors
but are no longer scored or reported. That removed the last use of the weakly
connected component machinery, so the union-find goes too.

The objective had the same population mismatch: the horizon normalised over every
task while the evaluator measured only movable ones, inflating WT_max elevenfold
on a portfolio with six months of history and squashing the urgency signal that
feeds the composite rule. Both now cover the same tasks. The horizon keeps a
separate term for fixed work because a movable task can still be pushed past its
own release by a fixed predecessor, and without it H would stop bounding the
makespan and the term would silently clamp.

Uploads were the other cluster. A batch wrote each file before validating the
next, so a bad second file left the first on disk for good; the batch is now
validated whole before anything is written. A file with no ownership row was
treated as pre-V5 legacy and served to any authenticated user, which an orphan
could not be told apart from - it is now refused, backed by an hourly sweep that
removes unreferenced uploads older than six hours and by V9, which backfills
ownership for everything that predates V5 so nothing existing 